Mise en place de la page About et des collapses + animation chevron et quelques corrections

--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -1,7 +1,9 @@
 // Couleurs 
 $main-color: #FF6060;
-
 $gallery-color: #F6F6F6;
+$collapse-color: #F6F6F6;
 $footer-color: black;
 
+// Texte
 $text_white: white;
+$text_red: #FF6060;
